--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+data/*
+database/*
+logs/*
+stdout
+uv.lock
+
+frontend/node_modules
+frontend/package-lock.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
